--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
     "recharts": "^2.15.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.19.1",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
     "autoprefixer": "^10.4.19",
@@ -54,6 +55,6 @@
     "postcss": "^8.4.38",
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.3"
+    "typescript": "^5.8.3"
   }
 }
